# morphnet_webtool

./: .gitattributes  .gitignore  README.md  _utils.py  app.py  pyproject.toml  requirements.txt  utils.py
models/gene_expression/patchseq_scVI/: adata.h5ad  model.pt
models/morphology/patchseq/: morphgan.pkl
