[tool.poetry]
name = "morphgan-webtool"
version = "0.1.0"
description = ""
authors = ["Hojae Lee <hojaelee@umich.edu>"]
readme = "README.md"
packages = [{include = "morphgan_webtool"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
scipy = "^1.9.1"
anndata = "^0.8.0"
torch = "^1.12.1"
streamlit = "^1.12.2"
pandas = "^1.4.4"
numpy = "^1.23.3"
matplotlib = "^3.5.3"
llvmlite = "^0.39.1"
umap-learn = "^0.5.3"
scanpy = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
