[tool.poetry]
name = "morphgan-webtool"
version = "0.1.0"
description = ""
authors = ["Hojae Lee <hojaelee@umich.edu>"]
readme = "README.md"
packages = [{include = "morphgan_webtool"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.13.0"
anndata = "^0.8.0"
scanpy = "^1.9.1"
scvi-tools = "0.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
